Fix aspect ratio of "Add tutorial" card on small devices

--- a/app/frontend/styles/roster.scss
+++ b/app/frontend/styles/roster.scss
@@ -148,18 +148,17 @@
 
 .registration-group-tile-col {
   max-width: 13rem;
-}
 
-@include media-breakpoint-up(xl) {
-  .registration-group-tile-col > .card {
-    height: auto !important;
-    aspect-ratio: 1 / 1;
-  }
-}
-
-@include media-breakpoint-down(md) {
-  .registration-group-tile-col {
+  @include media-breakpoint-down(md) {
     max-width: none;
+  }
+
+  & .card {
+    height: auto !important;
+
+    @include media-breakpoint-up(md) {
+      aspect-ratio: 1 / 1;
+    }
   }
 }
 
